# tjs-serial-display

./: .gitignore  CMakeLists.txt  Makefile  go.mod
cmd/: command.md  tjc-serial.go  tjc.go
internal/: serial_magager.go
internal/client/: callback.go  client.go  client_test.go  const.go  response.go
internal/serial/: manager.go  manager_test.go  serial_magager.go
pkg/client/: client.go
pkg/consts/: const.go
pkg/models/: callback.go  deviceinfo.go
